use mov for the simulation; added camera far; refine styles; more animation; fix video does not auto start and playsinline not set on iPhone Safari;

--- a/styles.css
+++ b/styles.css
@@ -23,24 +23,33 @@ ul, dl {
 }
 
 .back {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
   pointer-events: none;
 }
 
-.gradient7 {
+.gradient1 {
   position: absolute;
   height: 300%;
   width: 300%;
-  top: -100%;
-  left: -100%;
+  top: -120%;
+  right: -200%;
   background-size: 30px;
   background-image: url("./assets/img/wave.png");
   animation: slide 3s infinite linear;
+}
+
+.gradient2 {
+  position: absolute;
+  height: 200%;
+  width: 200%;
+  top: -50%;
+  right: 50%;
+  background-size: 30px;
+  background-image: url("./assets/img/wave.png");
+  animation: slide 3s infinite linear;
+  animation-direction: reverse;
 }
 
 @keyframes slide {
